<resources>
    <string name="app_name">SpeedQuiz</string>
    <string name="new_player">New Player</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_about">About</string>
    <string name="about_app_name">SpeedQuiz</string>
    <string name="about_app_author">Author : Théo Ballerini</string>
    <string name="about_app_version">Version 1.0</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="start">start</string>
    <string name="get_started">Préparez-vous</string>
    <string name="menu">Menu</string>
    <string name="rejouer">Rejouer</string>
    <string name="base_score">0</string>
    <string name="base_name">Name</string>
    <string name="finish">Fini</string>
    <string name="jeu_win">Gagné</string>
    <string name="jeu_lose">perdu</string>
    <string name="jeu_equality">égalité</string>
</resources>