<?xml version="1.0" encoding="utf-8"?>

<!-- Auteur: Théo Ballerini -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:onClick="clickActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="5dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/main_layout_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/layout_background"
        android:elevation="50dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_layout_margin"
            android:text="@string/actionbar_about"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_layout_margin"
            android:text="@string/about_app_name"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_layout_margin"
            android:text="@string/about_app_author"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_layout_margin"
            android:text="@string/about_app_version"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/main_newPlayer_button"
        style="@style/widget.Quiz.TextInputLayer.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.137" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_textInputLayout_player1"
        style="@style/widget.Quiz.TextInputLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin_top"
        android:hint="@string/player1"
        app:layout_constraintBottom_toTopOf="@+id/main_textInputLayout_player2"
        app:layout_constraintTop_toBottomOf="@+id/main_newPlayer_button">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/main_edittext_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_textInputLayout_player2"
        style="@style/widget.Quiz.TextInputLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player2"
        app:layout_constraintBottom_toBottomOf="@+id/main_layout_about"
        app:layout_constraintTop_toBottomOf="@+id/main_newPlayer_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_edittext_player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/main_start_button"
        style="@style/widget.Quiz.TextInputLayer.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>